# test-sui

./: .env  Cargo.toml  README.md
app-cli/: Cargo.toml  README.md
app-cli/src/: main.rs
app-data/: Cargo.toml  README.md
app-data/src/: lib.rs
app-lib/: Cargo.toml  README.md
app-lib/src/: connection.rs  lib.rs
app-web/: Cargo.toml  README.md
app-web/src/: lib.rs
app-web/tests/: data_creator.rs  test-routes.rs
