[package]
name = "app-lib"
version.workspace = true
edition.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app-data = { path = "../app-data" }

log = "0.4"


sui-sdk = { git = "https://github.com/mystenlabs/sui", package = "sui-sdk" }

tokio-stream = "0.1"

tokio = { version = "1.36", features = ["full"] }

backoff = { version = "0.4", features = [
    "futures",
    "tokio",
] } #thiserror = "1.0"
