[package]
name = "app-lib"
version.workspace = true
edition.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app-data = { path = "../app-data" }

log = { workspace = true }
anyhow = "1.0.80"

sui-sdk = { git = "https://github.com/mystenlabs/sui", package = "sui-sdk" }

tokio-stream = "0.1"

tokio = { workspace = true, features = ["full"] }
backoff = { version = "0.4", features = ["futures", "tokio"] }


jsonrpsee = { git = "https://github.com/wlmyng/jsonrpsee.git", rev = "b1b300784795f6a64d0fcdf8f03081a9bc38bde8", features = [
    # "server",
    # "macros",
    # "ws-client",
    # "http-client",
    "jsonrpsee-core",
] }
