[package]
name = "app-web"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app-data = { path = "../app-data" }

axum = "0.7"
tokio = { workspace = true, features = ["full"] }


[dev-dependencies]
axum-test-helpers = "0.7"
rand = "0.8"
